# claims-automaton

./: .env.example  .gitignore  INFORMATION_FLOW.md  LICENSE  PLAN.md  README.md  claims.md  pyproject.toml  requirements.txt  schema_output.json
claims/data/: policies.csv
docs/: claims_bpmn.md  general_insurance_payment_claim_process.bpmn
frontend/: README.md
frontend/api/: dependencies.py  main.py  schemas.py
frontend/api/routers/: claims.py  customer_service.py  ui.py
frontend/output/agent_traces/: CLM-1121161854_trace.txt  CLM-1121162033_trace.txt  CLM-1121162242_trace.txt  CLM-1121163727_trace.txt  (+5 more)
frontend/samples/: sample_claim.json  simple_claim.md
frontend/templates/: chat.html  index.html
output/agent_traces/: CLM-1121190629_trace.txt  CLM-1121191514_trace.txt  CLM-1121192301_trace.txt  CLM-1121194131_trace.txt  CLM-1121195038_trace.txt  CLM-1121195831_trace.txt  CLM-1121200051_trace.txt  CLM-1121200104_trace.txt
scripts/: validate_test_documents.py
sessions/CLM-1120125331/: context.json  history.jsonl  session.json
sessions/CLM-1121191514/: context.json  history.jsonl  session.json
sessions/CLM-1121194131/: context.json  history.jsonl  session.json
sessions/CLM-1121200051/: context.json  history.jsonl  session.json
sessions/CLM-1121200104/: context.json  history.jsonl  session.json
shared/: README.md
shared/config/: handoff_schema.json  policy_rules.yaml  required_information.yaml  validation_checklist.yaml
shared/datasets/: coverage_matrix.csv  vendors.csv
shared/submission/: REQUIRED_INFORMATION.md  claim_submission.md
(+41 files in other folders)
